# Entangrid

./: .gitignore  Cargo.toml  README.md
crates/entangrid-consensus/: Cargo.toml  README.md
crates/entangrid-consensus/src/: lib.rs
crates/entangrid-crypto/: Cargo.toml  README.md
crates/entangrid-crypto/src/: lib.rs
crates/entangrid-ledger/: Cargo.toml  README.md
crates/entangrid-ledger/src/: lib.rs
crates/entangrid-network/: Cargo.toml  README.md
crates/entangrid-network/src/: lib.rs
crates/entangrid-node/: Cargo.toml  README.md
crates/entangrid-node/src/: lib.rs  main.rs
crates/entangrid-sim/: Cargo.toml  README.md
crates/entangrid-sim/src/: lib.rs  main.rs
crates/entangrid-types/: Cargo.toml  README.md
crates/entangrid-types/src/: lib.rs
docs/: architecture.md  benchmarks.md  consensus-current-issue.md  current-flow.md  localnet.md  pq-stage-1-status.md  protocol.md  roadmap.md  sync-and-recovery.md  threat-model.md  v2-issue-status.md  verification.md
docs/superpowers/plans/: 2026-03-25-entangrid-consensus-v2.md  2026-03-27-entangrid-v2-stabilization.md  2026-03-31-pq-stage1-foundations.md  2026-04-01-pq-stage1b-ml-dsa-signing.md  2026-04-02-pq-stage1c-measurement.md  2026-04-02-pq-stage1d-hybrid-signing.md  2026-04-02-pq-stage1e-hybrid-enforcement.md  2026-04-02-pq-stage1f-hybrid-localnet-bootstrap.md  2026-04-04-pq-stage1g-hybrid-session-kem.md  2026-04-05-pq-stage1h-session-bootstrap.md  2026-04-05-pq-stage1i-encrypted-framing.md  2026-04-06-pq-stage1j-session-lifecycle-hardening.md  2026-04-07-pq-stage1k-relay-receipt-enforcement.md  2026-04-07-pq-stage1k-service-aggregate-closeout.md  2026-04-07-pq-stage1k-service-attestation-enforcement.md  entangrid-consensus-v2-status.md
docs/superpowers/specs/: 2026-03-31-pq-stage1-foundations-design.md  2026-04-01-pq-stage1b-ml-dsa-design.md  2026-04-02-pq-stage1c-measurement-design.md  2026-04-02-pq-stage1d-hybrid-signing-design.md  2026-04-02-pq-stage1e-hybrid-enforcement-design.md  2026-04-02-pq-stage1f-hybrid-localnet-bootstrap-design.md  2026-04-04-pq-stage1g-hybrid-session-kem-design.md  2026-04-05-pq-stage1h-session-bootstrap-design.md  2026-04-05-pq-stage1i-encrypted-framing-design.md  2026-04-06-pq-stage1j-session-lifecycle-hardening-design.md  2026-04-07-pq-stage1k-relay-receipt-enforcement-design.md  2026-04-07-pq-stage1k-service-aggregate-closeout-design.md  2026-04-07-pq-stage1k-service-attestation-enforcement-design.md
test-results/: pq-ml-dsa-measurements.md  test-review-2.md
