[workspace]
members = [
    "crates/entangrid-consensus",
    "crates/entangrid-crypto",
    "crates/entangrid-ledger",
    "crates/entangrid-network",
    "crates/entangrid-node",
    "crates/entangrid-sim",
    "crates/entangrid-types",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

