[package]
name = "entangrid-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pq-ml-dsa = ["dep:ml-dsa"]
pq-ml-kem = ["dep:chacha20poly1305", "dep:ml-kem", "dep:rand_core"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
blake3.workspace = true
chacha20poly1305 = { version = "0.10", optional = true }
entangrid-types = { path = "../entangrid-types" }
ml-dsa = { version = "0.0.4", optional = true }
ml-kem = { version = "0.2.1", optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
