[package]
name = "entangrid-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pq-ml-dsa = ["entangrid-crypto/pq-ml-dsa"]

[dependencies]
anyhow.workspace = true
entangrid-crypto = { path = "../entangrid-crypto" }
entangrid-types = { path = "../entangrid-types" }
serde_json.workspace = true

[dev-dependencies]
ml-dsa = "0.0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde.workspace = true
