[package]
name = "entangrid-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pq-ml-kem = ["entangrid-crypto/pq-ml-kem"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
entangrid-crypto = { path = "../entangrid-crypto" }
entangrid-types = { path = "../entangrid-types" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
libc = "0.2"
ml-kem = "0.2.1"
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json.workspace = true
