[package]
name = "entangrid-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
entangrid-consensus = { path = "../entangrid-consensus" }
entangrid-crypto = { path = "../entangrid-crypto" }
entangrid-ledger = { path = "../entangrid-ledger" }
entangrid-network = { path = "../entangrid-network" }
entangrid-types = { path = "../entangrid-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
