[package]
name = "entangrid-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pq-ml-dsa = ["entangrid-crypto/pq-ml-dsa", "entangrid-ledger/pq-ml-dsa"]
pq-ml-kem = ["entangrid-crypto/pq-ml-kem", "entangrid-network/pq-ml-kem"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
entangrid-consensus = { path = "../entangrid-consensus" }
entangrid-crypto = { path = "../entangrid-crypto" }
entangrid-ledger = { path = "../entangrid-ledger" }
entangrid-network = { path = "../entangrid-network" }
entangrid-types = { path = "../entangrid-types" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
ml-dsa = "0.0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
