[package]
name = "entangrid-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
entangrid-crypto = { path = "../entangrid-crypto" }
entangrid-types = { path = "../entangrid-types" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
