[package]
name = "entangrid-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pq-ml-dsa = ["entangrid-crypto/pq-ml-dsa", "dep:ml-dsa", "dep:rand_core"]
pq-ml-kem = ["entangrid-crypto/pq-ml-kem", "dep:ml-kem", "dep:rand_core"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
entangrid-crypto = { path = "../entangrid-crypto" }
entangrid-types = { path = "../entangrid-types" }
ml-dsa = { version = "0.0.4", optional = true }
ml-kem = { version = "0.2.3", optional = true }
rand.workspace = true
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
